Improving responsivity V7 and font button.

--- a/styles/css/common.css
+++ b/styles/css/common.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -340,14 +339,34 @@ template {
   display: none;
 }
 
+@media only screen and (min-width: 2440px) {
+  body .sidebarContainer {
+    width: 13vw;
+    max-width: unset;
+  }
+  body .sidebarContainer .sidebar {
+    width: 13vw;
+    max-width: unset;
+  }
+  body footer {
+    font-size: 1rem;
+  }
+  body button.navButton.bigFontsBtns {
+    font-size: 1.8rem;
+    width: 12rem;
+  }
+  body footer.bigFontsFooter {
+    font-size: 1.4rem;
+  }
+}
 @media only screen and (min-width: 481px) and (max-width: 768px) {
-  html body .bodyContainer .sidebarContainer {
+  body .sidebarContainer {
     min-width: 0;
     max-width: unset;
     width: 0;
     height: 0;
   }
-  html body .bodyContainer .sidebarContainer .sidebar {
+  body .sidebarContainer .sidebar {
     background-image: linear-gradient(0deg, hsl(283deg, 39%, 63%) 0%, hsl(283deg, 39%, 63%) 20%, hsl(283deg, 39%, 72%) 50%, hsl(283deg, 39%, 63%) 80%, hsl(283deg, 39%, 63%) 100%, hsl(184deg, 6%, 81%) 99%);
     max-width: unset;
     width: 100vw;
@@ -357,7 +376,7 @@ template {
     bottom: unset;
     left: 0;
   }
-  html body .bodyContainer .sidebarContainer .sidebar header.mediaQuery {
+  body .sidebarContainer .sidebar header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -365,38 +384,37 @@ template {
     height: 10vh;
     max-height: 5rem;
   }
-  html body .bodyContainer .sidebarContainer .sidebar header.mediaQuery .logo {
-    margin: 0 1vw 0 0;
+  body .sidebarContainer .sidebar header .logo {
+    margin: 0;
     height: 35px;
     width: 57px;
     border-radius: 10px;
   }
-  html body .bodyContainer .sidebarContainer .sidebar header.mediaQuery .logo .logoLink {
+  body .sidebarContainer .sidebar header .logo .logoLink {
     font-size: 1.26rem;
   }
-  html body .bodyContainer .sidebarContainer .sidebar header.mediaQuery nav {
+  body .sidebarContainer .sidebar header nav {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    padding: calc(0.2rem + 0.6vw);
+    padding: 0 1vw 0 3vw;
   }
-  html body .bodyContainer .sidebarContainer .sidebar header.mediaQuery nav ul {
+  body .sidebarContainer .sidebar header nav ul {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    width: 80vw;
   }
-  html body .bodyContainer .sidebarContainer .sidebar header.mediaQuery nav ul button {
+  body .sidebarContainer .sidebar header nav ul button {
     padding: 0;
     width: calc(2.4rem + 12vw);
     padding: 0.5vh 0;
     text-align: center;
-    margin: 1vh calc(0.01rem + 0.75vw);
-    font-size: calc(0.2rem + 2.2vw);
-    outline: 2px solid yellow;
+    margin: 1vh 0;
   }
-  html body .bodyContainer .sidebarContainer .sidebar footer.mediaQuery .shadow1 {
+  body .sidebarContainer .sidebar footer {
     position: fixed;
     left: -1vw;
     bottom: -3.4vh;
@@ -407,13 +425,19 @@ template {
     font-size: calc(0.9rem + 1vw);
     box-shadow: 10px -10px 10px hsla(0deg, 0%, 0%, 0.5);
   }
+  body .sidebarContainer button.navButton.bigFontsBtns {
+    font-size: 1.2rem;
+  }
+  body .sidebarContainer footer.bigFontsFooter {
+    font-size: 1.6rem;
+  }
 }
 @media only screen and (max-width: 480px) {
-  .mediaQueryMb .sidebarContainer {
+  body .sidebarContainer {
     min-width: 0;
     width: 0;
   }
-  .mediaQueryMb .sidebarContainer .sidebar {
+  body .sidebarContainer .sidebar {
     background-image: linear-gradient(0deg, hsl(283deg, 39%, 63%) 0%, hsl(283deg, 39%, 63%) 20%, hsl(283deg, 39%, 72%) 50%, hsl(283deg, 39%, 63%) 80%, hsl(283deg, 39%, 63%) 100%, hsl(184deg, 6%, 81%) 99%);
     max-width: unset;
     left: 0;
@@ -426,7 +450,7 @@ template {
     justify-content: flex-start;
     align-items: flex-start;
   }
-  .mediaQueryMb .sidebarContainer .sidebar header {
+  body .sidebarContainer .sidebar header {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -436,16 +460,16 @@ template {
     padding: 0 0.4rem;
     height: 6.5rem;
   }
-  .mediaQueryMb .sidebarContainer .sidebar header .logo {
+  body .sidebarContainer .sidebar header .logo {
     margin: 0;
     height: 35px;
     width: 56px;
     border-radius: 10px;
   }
-  .mediaQueryMb .sidebarContainer .sidebar header .logo .logoLink {
+  body .sidebarContainer .sidebar header .logo .logoLink {
     font-size: 1.26rem;
   }
-  .mediaQueryMb .sidebarContainer .sidebar header ul {
+  body .sidebarContainer .sidebar header ul {
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
@@ -453,7 +477,7 @@ template {
     width: 14rem;
     margin: 0;
   }
-  .mediaQueryMb .sidebarContainer .sidebar header nav {
+  body .sidebarContainer .sidebar header nav {
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
@@ -461,13 +485,13 @@ template {
     width: 14rem;
     padding: 0;
   }
-  .mediaQueryMb .sidebarContainer .sidebar header nav li button {
+  body .sidebarContainer .sidebar header nav li button {
     width: calc(2.4rem + 12vw);
     padding: 0.5vh 0;
     font-size: calc(0.2rem + 2.2vw);
     margin: 0.2rem 0.4rem;
   }
-  .mediaQueryMb .sidebarContainer .sidebar header .btn-menu {
+  body .sidebarContainer .sidebar header .btn-menu {
     visibility: visible;
     color: #dfbb45;
     background-color: hsl(283deg, 34%, 40%);
@@ -475,72 +499,35 @@ template {
     border-radius: 5px;
     border: 1px solid hsl(284deg, 38%, 11%);
   }
-  .mediaQueryMb .sidebarContainer .sidebar header .btn-menu:hover {
+  body .sidebarContainer .sidebar header .btn-menu:hover {
     box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
     position: relative;
     bottom: 5px;
     right: 5px;
   }
-  .mediaQueryMb .sidebarContainer .sidebar header .btn-menu:active {
+  body .sidebarContainer .sidebar header .btn-menu:active {
     box-shadow: inset 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
     color: #eef4a1;
   }
-  .mediaQueryMb .sidebarContainer .sidebar footer.mediaQuery .shadow1 {
+  body .sidebarContainer .sidebar footer {
     position: fixed;
     left: -1vw;
     bottom: -3.4vh;
+    padding: 2vw;
     border-radius: 0;
     width: 102vw;
     height: 2rem;
     font-size: calc(0.9rem + 1vw);
     box-shadow: 10px -10px 10px hsla(0deg, 0%, 0%, 0.5);
   }
-}
-/* Copia de respaldo del mq de móvil antes de trastear con el menú de dos lineas.
-@media only screen and (max-width: 480px) {
-  html body div.bodyContainer.mediaQueryMb {
-    & .sidebarContainer {
-      & .sidebar {
-        height: 3.5rem;
-        min-width: 0;
-        width: 3.3rem;
-        border: 2px solid tools.$cDefaultBorder;
-        border-radius: 0 0 20px 0;
-        padding: 2vw;
-        @include tools.flexing(row, none, flex-start, center);
-        & header {
-          & .logo,
-          & nav {
-            // All comments here trying to give two lines menu.
-            //display: none;
-            display: none;
-            transition: 6s ease width;
-          }
-          & .btn-menu {
-            @include tools.flexing(row, none, center, center);
-            color: tools.$cLogoText3;
-            background-color: tools.$cLogo;
-            font-size: 1.4rem;
-            border-radius: 5px;
-            border: 1px solid tools.$cLogoBorder;
-            &:hover {
-              @include tools.giveShadow(1);
-              position: relative;
-              bottom: 5px;
-              right: 5px;
-            }
-            &:active {
-              @include tools.giveShadow(2);
-              color: tools.$cLogoText2;
-            }
-          }
-        }
-      }
-    }
-    //animation here
+  body .sidebarContainer button.navButton.bigFontsBtns {
+    font-size: 1rem;
+    width: 6.2rem;
+  }
+  body .sidebarContainer footer.bigFontsFooter {
+    font-size: 1.4rem;
   }
 }
- */
 * {
   box-sizing: border-box;
 }
@@ -570,7 +557,7 @@ body {
   box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
 }
 
-body .bodyContainer {
+.bodyContainer {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -578,7 +565,7 @@ body .bodyContainer {
   width: 100vw;
 }
 
-.bodyContainer > .sidebarContainer {
+.sidebarContainer {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -587,7 +574,7 @@ body .bodyContainer {
   width: 18vw;
   max-width: 12rem;
 }
-.bodyContainer > .sidebarContainer .sidebar {
+.sidebarContainer .sidebar {
   outline: 1px solid black;
   display: flex;
   flex-direction: column;
@@ -603,11 +590,22 @@ body .bodyContainer {
   max-width: 12rem;
   width: 18vw;
 }
-.bodyContainer > .sidebarContainer .sidebar header {
+.sidebarContainer .sidebar header {
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
   align-items: center;
+}
+.sidebarContainer .sidebar.hidden {
+  min-width: unset;
+  width: 2.6rem;
+  border-radius: 0 0 60px 0;
+}
+.sidebarContainer .sidebar.hidden .logo {
+  visibility: hidden;
+}
+.sidebarContainer .sidebar.hidden nav {
+  visibility: hidden;
 }
 
 .btn-menu {
@@ -670,7 +668,6 @@ nav ul {
   list-style: none;
 }
 nav li button {
-  font-size: 1rem;
   border: 2px solid black;
   margin: 2vh 1rem;
   padding: 1vh 0;
@@ -694,59 +691,53 @@ nav li button:active {
   box-shadow: inset 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
 }
 
-footer div {
+footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 3vh;
-  padding: 0 0.5rem;
+  padding: 0 0.2rem;
   font-size: 0.8rem;
   border-radius: 8px;
   border: 2px solid hsl(284deg, 38%, 11%);
-  height: 2rem;
-  width: 16em;
   color: #eef4a1;
   background-color: hsl(283deg, 34%, 40%);
 }
-footer div .btn-font {
+footer .btn-font {
+  margin: 0.2rem 0.3em 0.2rem 0;
   border: 2px solid black;
+  display: flex;
   background-color: hsl(283deg, 34%, 60%);
   font-family: Arial, Helvetica, sans-serif;
-  display: flex;
+  font-size: 1.2rem;
   font-weight: 600;
-  line-height: 1rem;
 }
-footer div .btn-font:hover {
+footer .btn-font:hover {
   border: 2px solid #eef4a1;
   color: #eef4a1;
 }
-footer div .btn-font:active {
+footer .btn-font:active {
+  border: 2px solid hsl(45deg, 70%, 57%);
+  color: hsl(45deg, 70%, 57%);
+}
+footer p {
+  text-align: center;
+  margin: 0.3em 0;
+}
+
+button.navButton.bigFontsBtns {
+  font-size: 1.4rem;
+  width: 9.5rem;
+}
+
+button.fontButtonActive {
   border: 2px solid hsl(45deg, 70%, 57%);
   color: hsl(45deg, 70%, 57%);
 }
 
-html body .bodyContainer .sidebarContainer div.sidebar.hidden {
-  min-width: unset;
-  width: 2.6rem;
-  border-radius: 0 0 60px 0;
-}
-html body .bodyContainer .sidebarContainer div.sidebar.hidden .logo {
-  visibility: hidden;
-}
-html body .bodyContainer .sidebarContainer div.sidebar.hidden nav {
-  visibility: hidden;
-}
-
-html body button.btn-menu.bigFontsBtn {
-  outline: 3px solid red;
-  font-size: 1.8rem;
-  width: 12rem;
-}
-
-html body button.fontButtonActive {
-  border: 2px solid hsl(45deg, 70%, 57%);
-  color: hsl(45deg, 70%, 57%);
+footer.bigFontsFooter {
+  font-size: 0.9rem;
 }
 
 /*# sourceMappingURL=common.css.map */
