--- a/styles/sass/_common-mq.scss
+++ b/styles/sass/_common-mq.scss
@@ -1,204 +1,187 @@
 @use './tools' as tools;
 
+// BIG SCREEN
+@media only screen and (min-width: 2440px) {
+  body {
+    .sidebarContainer {
+      width: 13vw;
+      max-width: unset;
+      & .sidebar {
+        width: 13vw;
+        max-width: unset;
+      }
+    }
+    footer {
+      font-size: 1rem;
+      & .btn-font {
+      }
+    }
+    // BIG FONTS
+    & button.navButton.bigFontsBtns {
+      font-size: 1.8rem;
+      width: 12rem;
+    }
+    & footer.bigFontsFooter {
+      font-size: 1.4rem;
+    }
+  }
+}
+
 // TABLET
 @media only screen and (min-width: 481px) and (max-width: 768px) {
   //, (orientation: portrait)
-  html {
-    body .bodyContainer .sidebarContainer {
-      min-width: 0;
+  body .sidebarContainer {
+    min-width: 0;
+    max-width: unset;
+    width: 0;
+    height: 0;
+    & .sidebar {
+      background-image: tools.$gSideBarMq;
       max-width: unset;
-      width: 0;
-      height: 0;
-      & .sidebar {
-        background-image: tools.$gSideBarMq;
-        max-width: unset;
-        width: 100vw;
+      width: 100vw;
+      height: 10vh;
+      max-height: 5rem;
+      top: 0;
+      bottom: unset;
+      left: 0;
+      & header {
+        @include tools.flexing(row, none, space-between, center);
         height: 10vh;
         max-height: 5rem;
-        top: 0;
-        bottom: unset;
-        left: 0;
-        & header.mediaQuery {
-          @include tools.flexing(row, none, space-between, center);
-          height: 10vh;
-          max-height: 5rem;
-          & .logo {
-            margin: 0 1vw 0 0;
-            height: 35px;
-            width: 57px;
-            border-radius: 10px;
-            & .logoLink {
-              font-size: 1.26rem;
-            }
-          }
-          & nav {
-            @include tools.flexing(row, none, flex-start, center);
-            padding: calc(0.2rem + 3 * 0.2vw);
-            & ul {
-              @include tools.flexing(row, nowrap, center, center);
-              button {
-                padding: 0;
-                width: calc(2.4rem + 12vw);
-                padding: 0.5vh 0;
-                text-align: center;
-                margin: 1vh calc(0.01rem + 1.5 * 0.5vw);
-                font-size: calc(0.2rem + 2.2vw);
-                outline: 2px solid yellow;
-              }
-            }
+        & .logo {
+          margin: 0;
+          height: 35px;
+          width: 57px;
+          border-radius: 10px;
+          & .logoLink {
+            font-size: 1.26rem;
           }
         }
-        & footer.mediaQuery .shadow1 {
-          position: fixed;
-          left: -1vw;
-          bottom: -3.4vh;
-          padding: 2vw;
-          border-radius: 0;
-          width: 102vw;
-          height: 2rem;
-          font-size: calc(0.9rem + 1vw);
-          @include tools.giveShadow(3);
+        & nav {
+          @include tools.flexing(row, none, flex-start, center);
+          padding: 0 1vw 0 3vw;
+          & ul {
+            @include tools.flexing(row, nowrap, space-between, center);
+            width: 80vw;
+            button {
+              padding: 0;
+              width: calc(2.4rem + 12vw);
+              padding: 0.5vh 0;
+              text-align: center;
+              margin: 1vh 0;
+            }
+          }
         }
       }
+      & footer {
+        position: fixed;
+        left: -1vw;
+        bottom: -3.4vh;
+        padding: 2vw;
+        border-radius: 0;
+        width: 102vw;
+        height: 2rem;
+        font-size: calc(0.9rem + 1vw);
+        @include tools.giveShadow(3);
+      }
+    }
+    // BIG FONTS
+    & button.navButton.bigFontsBtns {
+      font-size: 1.2rem;
+    }
+    & footer.bigFontsFooter {
+      font-size: 1.6rem;
     }
   }
 }
 
 // MOBILE
 @media only screen and (max-width: 480px) {
-  html {
-    body .bodyContainer .sidebarContainer {
-      & .sidebar {
-      }
-    }
-  }
-
-  .mediaQueryMb {
-    & .sidebarContainer {
-      min-width: 0;
-      width: 0;
-      & .sidebar {
-        background-image: tools.$gSideBarMq;
-        max-width: unset;
-        left: 0;
-        height: 4.8rem;
-        width: 98vw;
-        //border: 2px solid tools.$cDefaultBorder;
-        border-radius: 0 0 20px 0;
-        padding: 0;
-        @include tools.flexing(row, wrap, flex-start, flex-start);
-        & header {
-          @include tools.flexing(row, nowrap, space-between, center);
-          max-height: 5rem;
-          width: 100%;
-          padding: 0 0.4rem;
-          height: 6.5rem;
-          & .logo {
-            margin: 0;
-            height: 35px;
-            width: 56px;
-            border-radius: 10px;
-            & .logoLink {
-              font-size: 1.26rem;
-            }
-          }
-          & ul {
-            // All comments here trying to give two lines menu.
-            @include tools.flexing(row, wrap, flex-start, flex-start);
-            //border: 3px solid red;
-            //width: 60vw;
-            width: 14rem;
-            margin: 0;
-          }
-          & nav {
-            @include tools.flexing(row, wrap, flex-start, flex-start);
-            width: 14rem;
-            padding: 0;
-            & li button {
-              width: calc(2.4rem + 12vw);
-              padding: 0.5vh 0;
-              font-size: calc(0.2rem + 2.2vw);
-              margin: 0.2rem 0.4rem;
-            }
-          }
-          .btn-menu {
-            //@include tools.flexing(row, none, center, center);
-            visibility: visible;
-            color: tools.$cLogoText3;
-            background-color: tools.$cLogo;
-            font-size: 1.4rem;
-            border-radius: 5px;
-            border: 1px solid tools.$cLogoBorder;
-            &:hover {
-              @include tools.giveShadow(1);
-              position: relative;
-              bottom: 5px;
-              right: 5px;
-            }
-            &:active {
-              @include tools.giveShadow(2);
-              color: tools.$cLogoText2;
-            }
+  body .sidebarContainer {
+    min-width: 0;
+    width: 0;
+    & .sidebar {
+      background-image: tools.$gSideBarMq;
+      max-width: unset;
+      left: 0;
+      height: 4.8rem;
+      width: 98vw;
+      //border: 2px solid tools.$cDefaultBorder;
+      border-radius: 0 0 20px 0;
+      padding: 0;
+      @include tools.flexing(row, wrap, flex-start, flex-start);
+      & header {
+        @include tools.flexing(row, nowrap, space-between, center);
+        max-height: 5rem;
+        width: 100%;
+        padding: 0 0.4rem;
+        height: 6.5rem;
+        & .logo {
+          margin: 0;
+          height: 35px;
+          width: 56px;
+          border-radius: 10px;
+          & .logoLink {
+            font-size: 1.26rem;
           }
         }
-        & footer.mediaQuery .shadow1 {
-          position: fixed;
-          left: -1vw;
-          bottom: -3.4vh;
-          border-radius: 0;
-          width: 102vw;
-          height: 2rem;
-          font-size: calc(0.9rem + 1vw);
-          @include tools.giveShadow(3);
+        & ul {
+          // All comments here trying to give two lines menu.
+          @include tools.flexing(row, wrap, flex-start, flex-start);
+          width: 14rem;
+          margin: 0;
+        }
+        & nav {
+          @include tools.flexing(row, wrap, flex-start, flex-start);
+          width: 14rem;
+          padding: 0;
+          & li button {
+            width: calc(2.4rem + 12vw);
+            padding: 0.5vh 0;
+            font-size: calc(0.2rem + 2.2vw);
+            margin: 0.2rem 0.4rem;
+          }
+        }
+        .btn-menu {
+          //@include tools.flexing(row, none, center, center);
+          visibility: visible;
+          color: tools.$cLogoText3;
+          background-color: tools.$cLogo;
+          font-size: 1.4rem;
+          border-radius: 5px;
+          border: 1px solid tools.$cLogoBorder;
+          &:hover {
+            @include tools.giveShadow(1);
+            position: relative;
+            bottom: 5px;
+            right: 5px;
+          }
+          &:active {
+            @include tools.giveShadow(2);
+            color: tools.$cLogoText2;
+          }
         }
       }
-    }
-    //animation here
-  }
-}
-
-/* Copia de respaldo del mq de móvil antes de trastear con el menú de dos lineas.
-@media only screen and (max-width: 480px) {
-  html body div.bodyContainer.mediaQueryMb {
-    & .sidebarContainer {
-      & .sidebar {
-        height: 3.5rem;
-        min-width: 0;
-        width: 3.3rem;
-        border: 2px solid tools.$cDefaultBorder;
-        border-radius: 0 0 20px 0;
+      & footer {
+        position: fixed;
+        left: -1vw;
+        bottom: -3.4vh;
         padding: 2vw;
-        @include tools.flexing(row, none, flex-start, center);
-        & header {
-          & .logo,
-          & nav {
-            // All comments here trying to give two lines menu.
-            //display: none;
-            display: none;
-            transition: 6s ease width;
-          }
-          & .btn-menu {
-            @include tools.flexing(row, none, center, center);
-            color: tools.$cLogoText3;
-            background-color: tools.$cLogo;
-            font-size: 1.4rem;
-            border-radius: 5px;
-            border: 1px solid tools.$cLogoBorder;
-            &:hover {
-              @include tools.giveShadow(1);
-              position: relative;
-              bottom: 5px;
-              right: 5px;
-            }
-            &:active {
-              @include tools.giveShadow(2);
-              color: tools.$cLogoText2;
-            }
-          }
-        }
+        border-radius: 0;
+        width: 102vw;
+        height: 2rem;
+        font-size: calc(0.9rem + 1vw);
+        @include tools.giveShadow(3);
       }
     }
-    //animation here
+    // BIG FONTS
+    & button.navButton.bigFontsBtns {
+      font-size: 1rem;
+      width: 6.2rem;
+    }
+    & footer.bigFontsFooter {
+      font-size: 1.4rem;
+    }
   }
+  //animation here
 }
- */
