--- a/styles/sass/common.scss
+++ b/styles/sass/common.scss
@@ -28,12 +28,12 @@ body {
   @include tools.giveShadow(1);
 }
 
-body .bodyContainer {
+.bodyContainer {
   @include tools.flexing(row, none, flex-start, center);
   width: 100vw;
 }
 
-.bodyContainer > .sidebarContainer {
+.sidebarContainer {
   @include tools.flexing(column, none, flex-start, center);
   min-width: 14rem;
   width: 18vw;
@@ -52,9 +52,19 @@ body .bodyContainer {
     max-width: 12rem;
     width: 18vw;
     //height: 100vh;
-
     & header {
       @include tools.flexing(column, nowrap, space-between, center);
+    }
+    &.hidden {
+      min-width: unset;
+      width: 2.6rem;
+      border-radius: 0 0 60px 0;
+      & .logo {
+        visibility: hidden;
+      }
+      & nav {
+        visibility: hidden;
+      }
     }
   }
 }
@@ -106,7 +116,7 @@ nav {
     list-style: none;
   }
   & li button {
-    font-size: 1rem;
+    //font-size: 1rem;
     border: 2px solid tools.$cDefaultBorder;
     margin: 2vh 1rem;
     padding: 1vh 0;
@@ -131,26 +141,23 @@ nav {
   }
 }
 
-footer div {
+footer {
   @include tools.flexing(row, none, space-between, center);
   margin-bottom: 3vh;
-  padding: 0 0.5rem;
+  padding: 0 0.2rem;
   font-size: 0.8rem;
   border-radius: 8px;
   border: 2px solid tools.$cFooterBorder;
-  height: 2rem;
-  width: 16em;
   color: tools.$footerFont;
   background-color: tools.$cLogo;
   & .btn-font {
-    //border: 1px solid red;
+    margin: 0.2rem 0.3em 0.2rem 0;
     border: 2px solid tools.$cDefaultBorder;
-    //background-image: tools.$gSideButton;
+    display: flex;
     background-color: tools.$cFontBottonBg;
     font-family: Arial, Helvetica, sans-serif;
-    display: flex;
+    font-size: 1.2rem;
     font-weight: 600;
-    line-height: 1rem;
     &:hover {
       border: 2px solid tools.$cFontButton;
       color: tools.$cFontButton;
@@ -160,28 +167,23 @@ footer div {
       color: tools.$cFontButtonActive;
     }
   }
-}
-
-html body .bodyContainer .sidebarContainer div.sidebar.hidden {
-  //border: 2px solid red;
-  min-width: unset;
-  width: 2.6rem;
-  border-radius: 0 0 60px 0;
-  & .logo {
-    visibility: hidden;
-  }
-  & nav {
-    visibility: hidden;
+  & p {
+    text-align: center;
+    margin: 0.3em 0;
   }
 }
 
-html body button.btn-menu.bigFontsBtn {
-  outline: 3px solid red;
-  font-size: 1.8rem;
-  width: 12rem;
+// BIG FONTS
+button.navButton.bigFontsBtns {
+  font-size: 1.4rem;
+  width: 9.5rem;
 }
 
-html body button.fontButtonActive {
+button.fontButtonActive {
   border: 2px solid tools.$cFontButtonActive;
   color: tools.$cFontButtonActive;
+}
+
+footer.bigFontsFooter {
+  font-size: 0.9rem;
 }
