--- a/styles/css/common.css
+++ b/styles/css/common.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -6,6 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap");
 html {
   line-height: 1.15;
@@ -668,6 +668,7 @@ nav ul {
   list-style: none;
 }
 nav li button {
+  font-family: "Oswald", sans-serif;
   border: 2px solid black;
   margin: 2vh 1rem;
   padding: 1vh 0;
