--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Play&display=swap");
 @media only screen and (min-width: 2440px) {
   main.bigFontsMain {
     font-size: calc(2.6rem + 0.32vw);
@@ -26,6 +27,32 @@ main {
   min-height: 100vh;
   background-color: hsl(184deg, 6%, 81%);
   font-size: calc(0.8rem + 0.32vw);
+}
+main h2,
+main h3,
+main h4,
+main h5,
+main h6 {
+  font-family: "Josefin Sans", sans-serif;
+}
+main h1 {
+  font-family: "Oleo Script Swash Caps", cursive;
+  color: red;
+  font-size: 300%;
+}
+main h2 {
+  color: green;
+}
+main p {
+  font-family: "Play", sans-serif;
+}
+main p:first-of-type::first-letter {
+  color: red;
+  float: left;
+  padding-top: 0.1em;
+  font-size: 3em;
+  line-height: 3em;
+  margin-right: 0.5rem;
 }
 main div {
   display: flex;
