--- a/styles/sass/common.scss
+++ b/styles/sass/common.scss
@@ -1,6 +1,9 @@
 @use './tools' as tools;
 @import './normalize';
 @import './_common-mq';
+//fonts
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -116,7 +119,7 @@ nav {
     list-style: none;
   }
   & li button {
-    //font-size: 1rem;
+    font-family: 'Oswald', sans-serif;
     border: 2px solid tools.$cDefaultBorder;
     margin: 2vh 1rem;
     padding: 1vh 0;
