--- a/styles/sass/home.scss
+++ b/styles/sass/home.scss
@@ -1,7 +1,42 @@
 @use './tools' as tools;
 @import './_home-mq';
+// Fonts
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
+
+// headings
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @extend %headings !optional;
+}
 
 main {
+  & %headings {
+    font-family: 'Josefin Sans', sans-serif;
+  }
+  & h1 {
+    font-family: 'Oleo Script Swash Caps', cursive;
+    color: red;
+    font-size: 300%;
+  }
+  & h2 {
+    color: green;
+  }
+  & p {
+    font-family: 'Play', sans-serif;
+    &:first-of-type::first-letter {
+      color: red;
+      float: left;
+      padding-top: 0.1em;
+      //top: 4em;
+      font-size: 3em;
+      line-height: 3em;
+      margin-right: 0.5rem;
+    }
+  }
   @include tools.flexing(column, none, flex-start, center);
   width: 100vw;
   padding: 1vw;
