--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -27,6 +27,7 @@ main {
   min-height: 100vh;
   background-color: hsl(184deg, 6%, 81%);
   font-size: calc(0.8rem + 0.32vw);
+  /*   [ MODAL ] */
 }
 main h2,
 main h3,
@@ -138,6 +139,87 @@ main .title .image img {
 }
 main.bigFontsMain {
   font-size: calc(1.6rem + 0.32vw);
+}
+main .modal-container {
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+}
+main .modal {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: hsl(55deg, 100%, 95%);
+  border-radius: 15px;
+  border: 2px solid black;
+  padding: 0.5rem;
+  transform: scale(1%);
+  transition: transform 5.3s;
+  transform: scale(100%);
+  /* & p {
+    color: var(--relaxr-almost-black);
+    font-size: 16px;
+    font-weight: var(--light);
+  } */
+}
+main .modal button {
+  font-family: "Oswald", sans-serif;
+  margin-left: 0.2rem;
+  height: 1.5em;
+  width: 1.5em;
+  color: #dfbb45;
+  background-color: hsl(283deg, 34%, 40%);
+  font-size: 1.6rem;
+  border-radius: 5px;
+  border: 1px solid hsl(284deg, 38%, 11%);
+  /* margin-top: 0.5%;
+  height: 2.5em;
+  width: 5em;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: var(--extra-bold);
+  color: var(--relaxr-white);
+  background-color: var(--relaxr-dark-blue);
+  &:hover {
+    background-color: var(--relaxr-yellow);
+    color: var(--relaxr-dark-blue);
+  } */
+}
+main .modal button:hover {
+  box-shadow: 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
+  position: relative;
+  bottom: 5px;
+  right: 5px;
+}
+main .modal button:active {
+  box-shadow: inset 10px 10px 10px hsla(0deg, 0%, 0%, 0.5);
+  color: #eef4a1;
+}
+main .modal-open {
+  opacity: 1;
+  visibility: visible;
+}
+main .modal-open .image-container {
+  width: 150%;
+  max-width: 93vw;
+  max-height: 93vh;
+}
+main .modal-open .image-container img {
+  max-height: 91vh;
+}
+main .modal-close {
+  opacity: 0;
+  visibility: hidden;
 }
 
 /*# sourceMappingURL=home.css.map */
