--- a/styles/sass/common.scss
+++ b/styles/sass/common.scss
@@ -43,6 +43,7 @@ body {
   max-width: 12rem;
 
   & .sidebar {
+    transition: all 0.2s ease;
     outline: 1px solid black;
     @include tools.flexing(column, none, space-between, center);
     background-color: tools.$cSidebarBg;
@@ -66,7 +67,8 @@ body {
         visibility: hidden;
       }
       & nav {
-        visibility: hidden;
+        transform: translateX(-500px);
+        //visibility: hidden;
       }
     }
   }
@@ -106,11 +108,13 @@ body {
   background-image: tools.$gLogoText;
   background-size: 95%;
   background-clip: text;
+  -webkit-background-clip: text;
   color: transparent;
   text-align: center;
   font-weight: 900;
 }
 nav {
+  transition: all 0.1s ease;
   padding: 1vh 1rem;
   padding: 0 1rem;
   & ul {
